<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speed"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/speedBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" android:layout_marginTop="5dip">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ToggleButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:text="ToggleButton" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relative"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ToggleButton
            android:id="@+id/relativeModeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="ToggleButton" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center" >

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forwardButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/leftButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:text="@string/left" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>